# attitude_check

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  CodeOfConduct.md  INSTALL.md  LICENSE  README.md  build.sh  setup.sh  uncrustify.cfg
.github/: codecov.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  custom_template.md  review_request.md
.github/workflows/: ci.yaml  mac_ci.yaml
docs/: Comments.tex  Common.tex  Makefile  README.md  attitude_check_imu_results.csv  attitude_check_marg_results.csv  sample_sensor_data_hz_285.7142857142857.csv
docs/Checklists/: SRS-Checklist.tex
docs/Design/SoftArchitecture/: MG.tex
docs/Design/SoftDetailedDes/: MIS.tex
docs/ProblemStatementAndGoals/: Makefile  ProblemStatement.tex  bib.bib
docs/Reflection/: Reflection.tex
docs/SRS/: Makefile  SRS.tex
docs/VnVPlan/: VnVPlan.tex
docs/VnVReport/: VnVReport.tex
docs/refs/: References.bib  bib.bib
examples/: CMakeLists.txt  basic_orientation_calculation.cpp  sparkfun_razor_6dof.cpp  sparkfun_razor_9dof.cpp
refs/: References.bib  bib.bib
scripts/: compare_results.py  create_sensor_csv.py  generate_test_cases.py  rmse_orientation_utils.py
scripts/utils/: read_mat_data.py
src/: CMakeLists.txt  attitude_check.cpp  attitude_check.h  attitude_check.hpp  error_handling.hpp  initializers.hpp  main.cpp  quaternion.hpp  utilities.hpp
src/utils/: read_mat_data.py
test/: CMakeLists.txt  attitude_check_test.cpp  initializers_test.cpp  quaternion_test.cpp  utilities_test.cpp
